--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-django==3.2.15
-django-debug-toolbar==3.2.1
-Pillow==8.2.0
-environs[django]==9.3.2
+django==5.1.6
+django-debug-toolbar==5.0.1
+Pillow==11.1.0
+environs[django]==14.1.1
+django-phonenumber-field[phonenumbers]==8.0.0
