--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 django==5.1.6
-django-debug-toolbar==5.0.1
+django-debug-toolbar~=3.2.1
 Pillow==11.1.0
-environs[django]==14.1.1
+environs[django]~=14.1.0
 django-phonenumber-field[phonenumbers]==8.0.0
 djangorestframework==3.15.2
+requests~=2.32.3
+geopy~=2.4.1
