--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
+  "name": "star-burger",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "parcel watch bundles-src/index.js --dist-dir bundles --public-url /static/",
+    "build": "parcel build bundles-src/index.js --dist-dir bundles --public-url /static/"
+  },
+  "browserslist": [
+    "last 2 chrome versions"
+  ],
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
     "core-js": "^3.21.1",
     "lodash": "^4.17.21",
-    "parcel": "^2.4.0",
     "react": "^17.0.2",
     "react-bootstrap": "^0.33.1",
     "react-dom": "^17.0.2",
     "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.8"
+    "@babel/core": "^7.17.8",
+    "@parcel/transformer-sass": "2.4.0",
+    "parcel": "^2.4.0",
+    "process": "^0.11.10"
   }
 }
